--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">important files to install before you get started.</a>
+      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to install before you get started.</a>
     </p>
 
     <div class="flex flex-wrap items-center gap-2 mb-4">
@@ -191,24 +191,24 @@
         <h3 class="text-xl font-bold text-white mb-3">Essential Files</h3>
         <div class="space-y-3">
           <p class="text-sm text-gray-300 mb-4">
-            A lot of old-school mods need some of these files to function. I recommend installing everything once and not thinking about it anymore.
+            A lot of old-school mods need some (sometimes all) of these files to work. I recommend installing everything once and not having to think about it anymore.
           </p>
           
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
             <h4 class="text-sm font-semibold text-white mb-1">7-Zip</h4>
-            <p class="text-xs text-gray-300 mb-1">Essential file archive tool to extract mod files and archives.</p>
+            <p class="text-xs text-gray-300 mb-1">Winrar has issues with some files extensions, always use 7zip to extract archives.</p>
             <a href="https://www.7-zip.org/" target="_blank" class="text-blue-400 hover:underline text-xs">Download 7-Zip</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
             <h4 class="text-sm font-semibold text-white mb-1">OpenAL</h4>
-            <p class="text-xs text-gray-300 mb-1">Audio library required by many S.T.A.L.K.E.R. mods for proper sound functionality.</p>
+            <p class="text-xs text-gray-300 mb-1">Audio library required by A LOT of old S.T.A.L.K.E.R. mods.</p>
             <a href="https://www.openal.org/downloads/" target="_blank" class="text-blue-400 hover:underline text-xs">Download OpenAL</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
             <h4 class="text-sm font-semibold text-white mb-1">DirectX End-User Runtimes 2010</h4>
-            <p class="text-xs text-gray-300 mb-1">Legacy DirectX runtime components needed for older S.T.A.L.K.E.R. mods and enhanced graphics.</p>
+            <p class="text-xs text-gray-300 mb-1">Legacy DirectX runtime components needed for these beautiful OG graphics.</p>
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=8109" target="_blank" class="text-blue-400 hover:underline text-xs">Download DirectX Runtime 2010</a>
           </div>
 
@@ -220,7 +220,7 @@
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
             <h4 class="text-sm font-semibold text-white mb-1">Visual C++ Redistributable 2013 x86</h4>
-            <p class="text-xs text-gray-300 mb-1">Essential runtime libraries for older 32-bit mod executables and tools.</p>
+            <p class="text-xs text-gray-300 mb-1">More essential runtime libraries for older 32-bit mod executables.</p>
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-xs">Download VC++ 2013 x86</a>
           </div>
 
