--- a/index.html
+++ b/index.html
@@ -143,12 +143,16 @@
     </div>
 
     <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
-    <p class="text-gray-300 text-sm mb-6">
+    
+    <p class="text-gray-300 text-sm mb-2">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to install before you get started.</a>
+      All credits go to the Authors of these mods.
     </p>
-
+    <p class="text-gray-300 text-sm mb-6">
+      <a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to install before you get started.</a>
+    </p>
+    
     <div class="flex flex-wrap items-center gap-2 mb-4">
       <button id="sort-button" aria-label="Sort mods by rating" class="bg-yellow-500 hover:bg-yellow-600 text-black text-sm font-medium py-1 px-3 rounded w-32">
         Sort by Rating
