--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
       0% { background-position: 200% 0; }
       100% { background-position: -200% 0; }
     }
+    .arrow-pointer {
+      width: 0;
+      height: 0;
+      border-left: 6px solid white;
+      border-top: 4px solid transparent;
+      border-bottom: 4px solid transparent;
+      display: inline-block;
+      margin-right: 6px;
+    }
   </style>
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
@@ -149,7 +158,7 @@
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, discord servers etc. All credits go to the Authors of these mods.
     </p>
     <p class="text-gray-300 text-sm mb-6">
-      <a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to install before you get started.</a>
+      <span class="arrow-pointer"></span><a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to install before you get started.</a>
     </p>
     
     <div class="flex flex-wrap items-center gap-2 mb-4">
