--- a/guides/mod06-legendreturns.html
+++ b/guides/mod06-legendreturns.html
@@ -14,7 +14,7 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Requires Visual C++ Redist 2013 x86, DirectX End-User Runtimes 2010.</li>
+      <li>Requires Dependencies found in "Essentials" at the top of the page (Visual C++ Redist 2013 x86, DirectX End-User Runtimes 2010).</li>
       <li>Extract Archive, move game folder to the root of your drive.</li>
       <li>Launch the mod using "Launch Legend Returns.bat".</li>
       <li>(Optional) On first launch, reset weather & lighting settings to default.</li>
@@ -90,5 +90,6 @@
   </div>
 </body>
 </html>
+
 
 
