--- a/guides/mod05-dollchan.html
+++ b/guides/mod05-dollchan.html
@@ -14,7 +14,8 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL like many old-school mods.</li>
+      <li>Requires Dependencies found in "Essentials" at the top of the page.</li>
+      <li>(Microsoft Visual C++ 2017, DirectX and OpenAL).</li>
       <li>Extract Archive, move game folder to the root of your drive.</li>
       <li>Launch the mod using "Dollchan.exe".</li>
       <li>(Optional) Switch game engine in "JSGME.exe" - Anomaly is recommended.</li>
@@ -54,4 +55,5 @@
   </div>
 </body>
 </html>
+
 
