2x2 grid for buttons

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
 
     /* Responsive button layout */
     @media (max-width: 640px) {
+      .button-container {
+        width: 100%;
+      }
+      
       .button-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
