--- a/index.html
+++ b/index.html
@@ -135,12 +135,8 @@
     
     /* Button highlight styles */
     .button-active {
-      background-color: white !important;
-      color: black !important;
-      border: 2px solid white;
-    }
-    .button-active:hover {
-      background-color: #f3f4f6 !important;
+      border: 2px solid white !important;
+      box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
     }
   </style>
 </head>
