--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
     <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mb-1 gap-2">
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
       <div class="grid grid-cols-2 sm:flex gap-2">
-        <button id="essentials-button" aria-label="View essential files" class="bg-gray-700 hover:bg-gray-600 text-white text-[11px] font-medium py-1 px-2 rounded w-[85px]">
+        <button id="essentials-button" aria-label="View essential files" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded w-[85px]">
           Essentials
         </button>
-        <button id="contact-button" aria-label="About" class="bg-gray-700 hover:bg-gray-600 text-white text-[11px] font-medium py-1 px-2 rounded w-[85px]">
+        <button id="contact-button" aria-label="About" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded w-[85px]">
           About
         </button>
         <button id="toggle-grades" aria-label="Toggle grades visibility" class="bg-gray-700 hover:bg-gray-600 text-white text-[11px] font-medium py-1 px-2 rounded transition-all duration-200 border-2 border-transparent w-[85px]">
