--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods Collection</title>
+  <title>S.T.A.L.K.E.R. Mods Archive - Cheeki's Story Mods Collection</title>
   
   <!-- SEO -->
-  <meta name="description" content="Archive of S.T.A.L.K.E.R. story mods reviewed by Cheeki. Download links, ratings, and install guides for Shadow of Chernobyl, Clear Sky, and Call of Pripyat modifications.">
-  <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. modifications, game mods, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
-  <meta name="author" content="Cheeki">
+  <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
+  <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. story mods, game mods, STALKER Anomaly, Call of Chernobyl, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
+  <meta name="author" content="CheekiBreeki">
   
   <!-- Favicons -->
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
-  <meta property="og:title" content="Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods">
-  <meta property="og:description" content="Archive of S.T.A.L.K.E.R. story mods with reviews, ratings, and download links">
+  <meta property="og:title" content="S.T.A.L.K.E.R. Mods Archive - Cheeki's Story Mods Collection">
+  <meta property="og:description" content="Archive of S.T.A.L.K.E.R. story mods with reviews, rankings, install guides and download links">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.cheeki.zone">
   <meta property="og:image" content="https://www.cheeki.zone/og-image.jpg">
@@ -158,7 +158,7 @@
 </script>
   <div class="max-w-6xl mx-auto">
     <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mb-1 gap-2">
-      <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
+      <h1 class="text-3xl font-bold">S.T.A.L.K.E.R. Mods Archive</h1>
       <div class="grid grid-cols-2 sm:flex gap-2">
         <button id="essentials-button" aria-label="View essential files" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
           Essentials
@@ -175,7 +175,7 @@
       </div>
     </div>
 
-    <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
+    <h2 class="text-lg text-gray-400 mb-3">Cheeki's Story Mods Collection</h2>
     
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
