--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>S.T.A.L.K.E.R. Mods Archive - Cheeki's Story Mods Collection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+  <title>Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods Collection</title>
   
   <!-- SEO -->
   <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
@@ -158,7 +158,7 @@
 </script>
   <div class="max-w-6xl mx-auto">
     <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mb-1 gap-2">
-      <h1 class="text-3xl font-bold">S.T.A.L.K.E.R. Mods Archive</h1>
+      <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
       <div class="grid grid-cols-2 sm:flex gap-2">
         <button id="essentials-button" aria-label="View essential files" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
           Essentials
@@ -175,7 +175,7 @@
       </div>
     </div>
 
-    <h2 class="text-lg text-gray-400 mb-3">Cheeki's Story Mods Collection</h2>
+    <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
     
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
