--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <div class="max-w-6xl mx-auto">
     <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mb-1 gap-2">
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
-      <div class="hidden sm:grid grid-cols-2 sm:flex gap-2">
+      <div class="hidden sm:flex gap-2">
         <button id="essentials-button" aria-label="View essential files" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
           Essentials
         </button>
