--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods Collection</title>
+  <title>Cheeki's Mods Archive - A collection of S.T.A.L.K.E.R. Story Mods</title>
   
   <!-- SEO -->
   <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
@@ -15,7 +15,7 @@
   <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
-  <meta property="og:title" content="S.T.A.L.K.E.R. Mods Archive - Cheeki's Story Mods Collection">
+  <meta property="og:title" content="Cheeki's Mods Archive - A collection of S.T.A.L.K.E.R. Story Mods">
   <meta property="og:description" content="Archive of S.T.A.L.K.E.R. story mods with reviews, rankings, install guides and download links">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.cheeki.zone">
@@ -27,7 +27,7 @@
     "@type": "WebSite",
     "name": "Cheeki's Mods Archive",
     "url": "https://www.cheeki.zone",
-    "description": "Archive of S.T.A.L.K.E.R. story mods reviewed by Cheeki",
+    "description": "Archive of the best S.T.A.L.K.E.R. story mods",
     "author": {
       "@type": "Person",
       "name": "Cheeki"
