--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
   <title>Cheeki's Mods Archive - A collection of S.T.A.L.K.E.R. Story Mods</title>
   
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.cheeki.zone">
+  
   <!-- SEO -->
   <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
   <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. story mods, game mods, STALKER Anomaly, Call of Chernobyl, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
@@ -24,7 +27,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebSite",
+    "@type": ["WebSite", "CollectionPage"],
     "name": "Cheeki's Mods Archive",
     "url": "https://www.cheeki.zone",
     "description": "Archive of the best S.T.A.L.K.E.R. story mods",
@@ -36,11 +39,23 @@
       "@type": "SearchAction",
       "target": "https://www.cheeki.zone/?search={search_term_string}",
       "query-input": "required name=search_term_string"
+    },
+    "mainEntity": {
+      "@type": "ItemList",
+      "name": "S.T.A.L.K.E.R. Story Mods Collection",
+      "description": "A curated collection of story modifications for the S.T.A.L.K.E.R. game series",
+      "numberOfItems": "50+",
+      "itemListOrder": "http://schema.org/ItemListOrderDescending",
+      "itemListElement": {
+        "@type": "ListItem",
+        "name": "S.T.A.L.K.E.R. Game Modifications",
+        "description": "Story-focused mods for Shadow of Chernobyl, Clear Sky, and Call of Pripyat"
+      }
     }
   }
   </script>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com" defer></script>
   <style>
     .hide-videos .video-container {
       display: none;
@@ -221,6 +236,7 @@
   <div id="contact-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-md w-full p-4 relative text-sm text-gray-200">
       <button id="contact-close" aria-label="Close contact popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
+      <h3 class="text-lg font-bold text-white mb-3">About</h3>
       <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixing.</p>
       <div class="flex items-center gap-2">
         <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
