--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   }
   </script>
 
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .hide-videos .video-container {
       display: none;
