--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>Cheeki's Mods Archive - A collection of S.T.A.L.K.E.R. Story Mods</title>
-  
-  <!-- Canonical URL -->
+  <title>S.T.A.L.K.E.R. Mods Archive | Install Guides & Downloads - Cheeki's Story Mods Archive</title>
   <link rel="canonical" href="https://www.cheeki.zone">
-  
-  <!-- SEO -->
   <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
   <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. story mods, game mods, STALKER Anomaly, Call of Chernobyl, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
   <meta name="author" content="CheekiBreeki">
-  
-  <!-- Favicons -->
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  
   <meta property="og:title" content="Cheeki's Mods Archive - A collection of S.T.A.L.K.E.R. Story Mods">
   <meta property="og:description" content="Archive of S.T.A.L.K.E.R. story mods with reviews, rankings, install guides and download links">
   <meta property="og:type" content="website">
@@ -154,7 +147,6 @@
       margin-right: 6px;
     }
     
-    /* Button highlight styles */
     .button-active {
       border-color: white !important;
       box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
@@ -678,7 +670,6 @@
       }
     });
 
-    // Sync mobile toggle states with desktop buttons
     const toggleGrades = document.getElementById('toggle-grades');
     const toggleGradesMobile = document.getElementById('toggle-grades-mobile');
     const toggleVideos = document.getElementById('toggle-videos');
