--- a/guides/mod02-wot.html
+++ b/guides/mod02-wot.html
@@ -18,6 +18,7 @@
       <li>Simply Extract Archive, move game folder to the root of your drive.</li>
       <li>Right Click Stalker-COP.exe → Properties → Compatibility → Run as administrator</li>
       <li>Launch with Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTDs.</li>
+      <li>(Optional) Delete pctrlchk.dll in the bin folder if your game doesn't launch.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
@@ -49,3 +50,4 @@
   </div>
 </body>
 </html>
+
