--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <p id="email-text" class="text-blue-400 hidden">cheekitos@proton.me</p>
       </div>
       
-      <div class="border-t border-gray-700 pt-4">
+      <div class="bg-gray-800 rounded-lg p-3 mt-4">
         <h4 class="text-white text-sm font-medium mb-3">Fan content creation guidelines</h4>
         
         <div class="mb-3">
