--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="bg-gray-900 rounded-lg max-w-md w-full max-h-[90vh] overflow-auto p-4 relative text-sm text-gray-200">
       <button id="contact-close" aria-label="Close contact popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
       <h3 class="text-lg font-bold text-white mb-3">About</h3>
-      <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixing.</p>
+      <p class="mb-4">You can contact me here. Please only use this to report a broken link or incorrect information that needs fixing.</p>
       <div class="flex items-center gap-2 mb-4">
         <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
           Reveal Email
