--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>S.T.A.L.K.E.R. Mods Archive | Install Guides & Downloads - Cheeki's Story Mods Archive</title>
+  <title>Cheeki's S.T.A.L.K.E.R. Mods Archive | Install Guides & Downloads</title>
   <link rel="canonical" href="https://www.cheeki.zone">
   <meta name="description" content="Archive of S.T.A.L.K.E.R. mods. Download links, rankings, and install guides for STALKER games modifications.">
-  <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. story mods, game mods, STALKER Anomaly, Call of Chernobyl, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
+  <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. story mods, Cheeki Breeki, STALKER Anomaly, Shadow of Chernobyl, Clear Sky, Call of Pripyat, Best Stalker mods">
   <meta name="author" content="CheekiBreeki">
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96">
@@ -16,6 +16,10 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.cheeki.zone">
   <meta property="og:image" content="https://www.cheeki.zone/og-image.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Cheeki's S.T.A.L.K.E.R. Mods Archive">
+  <meta name="twitter:description" content="Curated S.T.A.L.K.E.R. story mods with install guides and downloads">
+  <meta name="twitter:image" content="https://www.cheeki.zone/og-image.jpg">
   
   <script type="application/ld+json">
   {
