--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
-            <h4 class="text-sm font-semibold text-white mb-1">DirectX End-User Runtimes 2010</h4>
-            <p class="text-xs text-gray-300 mb-1">Legacy DirectX runtime components needed for these beautiful OG graphics.</p>
-            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=8109" target="_blank" class="text-blue-400 hover:underline text-xs">Download DirectX Runtime 2010</a>
+            <h4 class="text-sm font-semibold text-white mb-1">C++ Redistributable Runtimes</h4>
+            <p class="text-xs text-gray-300 mb-1">All-in-one package of essential runtime libraries for older executables.</p>
+            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-xs">Download VC++ 2013 x86</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
@@ -342,16 +342,11 @@
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
-            <h4 class="text-sm font-semibold text-white mb-1">Visual C++ Redistributable 2013 x86</h4>
-            <p class="text-xs text-gray-300 mb-1">More essential runtime libraries for older 32-bit mod executables.</p>
-            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-xs">Download VC++ 2013 x86</a>
+            <h4 class="text-sm font-semibold text-white mb-1">DirectX End-User Runtimes 2010</h4>
+            <p class="text-xs text-gray-300 mb-1">Legacy DirectX runtime components needed for these beautiful OG graphics.</p>
+            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=8109" target="_blank" class="text-blue-400 hover:underline text-xs">Download DirectX Runtime 2010</a>
           </div>
 
-          <div class="bg-gray-800 rounded-lg p-2.5">
-            <h4 class="text-sm font-semibold text-white mb-1">Visual C++ Redistributable 2015+</h4>
-            <p class="text-xs text-gray-300 mb-1">Latest Visual C++ runtime libraries for newer mods and enhanced features.</p>
-            <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170" target="_blank" class="text-blue-400 hover:underline text-xs">Download VC++ 2015+ Latest</a>
-          </div>
         </div>
       </div>
     </div>
